--- a/api/Pipfile
+++ b/api/Pipfile
@@ -4,10 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "==1.1.2"
+flask = "==2.2.2"
 requests = "==2.25.1"
 python-dotenv = "==0.15.0"
 flask-cors = "==3.0.10"
+Werkzeug= "==2.2.2"
 
 [dev-packages]
 black = "==20.8b1"
@@ -15,4 +16,4 @@ pylint = "==2.7.2"
 pycodestyle = "==2.6.0"
 
 [requires]
-python_version = "3.9"
+python_version = "3.10.12"
