--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,10 +4,11 @@ WORKDIR /app
 
 EXPOSE 3000
 
-COPY package.json package-lock.json ./
+COPY --chown=node:node package.json package-lock.json ./
 
 RUN npm install --silent
 
-COPY . ./
+COPY --chown=node:node . .
+USER node
 
 CMD ["npm","start"]
